# BruhBot

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  cum-counter.json  docker-compose.yaml  index.js  initiative.json  jest.config.js  killMessages.json  package-lock.json  package.json  pnpm-lock.yaml  publish.sh  run.sh  socks.json  tsconfig.json
bash-scripts/: build-all.sh  build-chatbot.sh  build-objection-engine.sh  compose-up.sh  down.sh  linux-up.sh  mongo-up.sh  publish-all.sh  publish.sh  restart.sh  up.sh
chat-trainer/: Makefile  README.md  requirements.txt  setup.py
chat_trainer/: .gitignore  Dockerfile  README.md  chat_trainer.py  config.yml  domain.yml  nlu.md  requirements.txt  setup.py
data/: kill-messages.json
deployments/: development.yaml  docker-compose.debug.yaml  old.docker-compose.debug.yaml  production.yaml
diagrams/: Command Processing Pipeline.mkd
errors/: CumCounterError.js  TeamBuilderError.js
modules/: BruhBot.js  ChatMessages.js  CumCounter.js  DiceRoller.js  MessageChecker.js  MessageMap.js  Music.js  RoundTracker.js  TeamBuilder.js
objection-engine/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  requirements.txt
src/: ace.ts  ascii-table.ts  chatbot.ts  command-updater.ts  command.ts  commandRegister.ts  constants.ts  db.ts  deploy-dev-commands.ts  deploy-prod-commands.ts  index.ts  lib.rs  listeners.ts  log.ts  main.rs  render.ts  update-pins.ts  utils.ts
src-old/: ace.ts  command-names.ts  command-register.ts  db.ts  index.ts  listeners.ts  update-pins.ts
(+201 files in other folders)
