[package]
name = "BruhBot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.37"
dotenvy = "0.15.7"
env_logger = "0.11.3"
log = "0.4.21"
moka = { version = "0.12.5", features = ["future"] }
mongodb = { version = "2.8.2", features = ["tracing-unstable"] }
poise = "0.6.1"
regex = "1.10.4"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
